CSS pseudo element and class and bootstrap upload

--- a/codes/day-1/contacts-app/index.html
+++ b/codes/day-1/contacts-app/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts App</title>
+    <link href="./styles/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,17 +15,17 @@
             Enter Contact Details:
         </legend>
         <form>
-            <div>
+            <div id="divName" class="myStyle">
                 <label for="txtName">Enter Name: &nbsp;</label>
                 <input type="text" id="txtName">
             </div>
             <br>
-            <div>
+            <div id="divEmail">
                 <label for="txtEmail">Enter Email: &nbsp;</label>
                 <input type="email" id="txtEmail">
             </div>
             <br>
-            <div>
+            <div class="myStyle">
                 <label for="txtMobile">Enter Mobile: &nbsp;</label>
                 <input type="text" id="txtMobile">
             </div>
