--- a/codes/day-1/web-first-app/index.html
+++ b/codes/day-1/web-first-app/index.html
@@ -9,6 +9,13 @@
     <title>
         Index
     </title>
+    <!-- <link rel="import" href="./dashboard.html"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./app.css">
     <script>
         function call() {
             var txtObj = document.getElementById('txtVal')
@@ -18,12 +25,54 @@
 </head>
 
 <body>
-    <h2>Welcome to HTML-CSS-JS</h2>
+    <div class="container divStyle">
+        <table class="table table-hover" id="tblProducts">
+            <thead class="headStyle">
+                <tr>
+                    <th>Image</th>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Rating</th>
+                </tr>
+            </thead>
+            <tbody class="table-dark">
+                <tr>
+                    <td>
+                        <img class="imgStyle" src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg"
+                            alt="NA" title="Dell XPS">
+                    </td>
+                    <td>dell xps</td>
+                    <td>100000</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="imgStyle" src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg"
+                            alt="NA" title="Dell XPS">
+                    </td>
+                    <td>dell xps</td>
+                    <td>100000</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img class="imgStyle" src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg"
+                            alt="NA" title="Dell XPS">
+                    </td>
+                    <td>dell xps</td>
+                    <td>100000</td>
+                    <td>4</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
     <br>
-    Value:&nbsp;&nbsp;
-    <input type="text" id="txtVal" placeholder="enter value here">
-    <br>
-    <button type="button" onclick="call()">Click For Message</button>
+    <div id="test">
+        <h2>Header</h2>
+        <br>
+        Content
+
+    </div>
 </body>
 
 </html>
