--- a/codes/day-1/web-first-app/add-product.html
+++ b/codes/day-1/web-first-app/add-product.html
@@ -2,14 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="joydip">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <title>
-        Index
-    </title>
-    <!-- <link rel="import" href="./dashboard.html"> -->
+    <title>Add Product</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -17,12 +13,6 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./theme.css">
     <link rel="stylesheet" href="./app.css">
-    <script>
-        function call() {
-            var txtObj = document.getElementById('txtVal')
-            window.alert('Hello: ' + txtObj.value)
-        }
-    </script>
 </head>
 
 <body>
@@ -56,54 +46,26 @@
     </nav>
     <br>
     <div class="container divStyle">
-        <h2>Product List</h2>
-        <br>
-        <table class="table table-hover" id="tblProducts">
-            <thead class="headStyle">
-                <tr>
-                    <th>Image</th>
-                    <th>Name</th>
-                    <th>Price</th>
-                    <th>Rating</th>
-                </tr>
-            </thead>
-            <tbody class="table-dark">
-                <tr>
-                    <td>
-                        <img class="imgStyle" src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg"
-                            alt="NA" title="Dell XPS">
-                    </td>
-                    <td>dell xps</td>
-                    <td>100000</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td>
-                        <img class="imgStyle" src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg"
-                            alt="NA" title="Dell XPS">
-                    </td>
-                    <td>dell xps</td>
-                    <td>100000</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td>
-                        <img class="imgStyle" src="https://m.media-amazon.com/images/I/81KoSSAwH2L._SL1500_.jpg"
-                            alt="NA" title="Dell XPS">
-                    </td>
-                    <td>dell xps</td>
-                    <td>100000</td>
-                    <td>4</td>
-                </tr>
-            </tbody>
-        </table>
+        <form>
+            <div class="mb-3">
+                <label for="txtName" class="form-label">Name:</label>
+                <input type="text" class="form-control" id="txtName">
+            </div>
+            <div class="mb-3">
+                <label for="txtPrice" class="form-label">Price:</label>
+                <input type="number" class="form-control" id="txtPrice">
+            </div>
+            <div class="mb-3">
+                <label for="txtRating" class="form-label">Rating:</label>
+                <input type="number" class="form-control" id="txtRating">
+            </div>
+            <div class="mb-3">
+                <label for="imgUpload" class="form-label">Upload Image:</label>
+                <input type="file" class="form-control" id="imgUpload">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
     </div>
-    <br>
-    <!-- <div id="test">
-        <h2>Header</h2>
-        <br>
-        Content
-    </div> -->
 </body>
 
 </html>
