--- a/codes/day-3/products-app/product-list.html
+++ b/codes/day-3/products-app/product-list.html
@@ -6,35 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
-    <!-- <script>
-        document
-            .createElement('script')
-            .setAttribute('src', './src/product.js')
-    </script> -->
+
+    <!--Bootstrap links-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
+
+    <!--Bootswatch Theme link-->
+    <link rel="stylesheet" href="./styles/theme.css">
+
+    <!--custom CSS file link-->
+    <link rel="stylesheet" href="./styles/styles.css">
+
+    <!--source code script files link-->
     <script src="./src/product.js"></script>
     <script src="./src/repository.js"></script>
-    <script src="./src/index.js"></script>
+    <script src="./src/product-list.js"></script>
 </head>
 
 <body>
-    <div>
-        <label for="txtFilter">Filter By:&nbsp;</label>
-        <input type="text" id="txtFilter">
-    </div>
-    <br>
-    <table>
-        <thead>
-            <tr>
-                <th>Image</th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Rating</th>
-            </tr>
-        </thead>
-        <tbody id="tblProductsBody">
+    <div class="container containerStyle">
+        <div class="mb-3">
+            <label for="txtFilter">Filter By:&nbsp;</label>
+            <input type="text" id="txtFilter">
+        </div>
+        <br>
+        <table class="table table-hover">
+            <thead class="theadStyle">
+                <tr>
+                    <th scope="column">Image</th>
+                    <th scope="column">Name</th>
+                    <th scope="column">Price</th>
+                    <th scope="column">Rating</th>
+                </tr>
+            </thead>
+            <tbody id="tblProductsBody" class="table-dark">
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
