products-app uploaded

--- a/codes/day-3/products-app/product-list.html
+++ b/codes/day-3/products-app/product-list.html
@@ -22,8 +22,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
 
     <!--source code script files link-->
-    <script src="./src/product.js"></script>
-    <script src="./src/repository.js"></script>
+    <script src="./src/models/product.js"></script>
     <script src="./src/product-list.js"></script>
 </head>
 
